# stock-predict

./: app.py  data.py  pyproject.toml  test.py  toy.py
